<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#ffffff" >
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pdr_origin_lon"/>
        <EditText 
            android:id="@+id/input_lon"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" 
            android:background="#dddddd"
            android:inputType="numberSigned|numberDecimal"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#ffffff" >
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pdr_origin_lat"/>
        <EditText 
            android:id="@+id/input_lat"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" 
            android:background="#dddddd"
            android:inputType="numberSigned|numberDecimal"/>
    </LinearLayout>
    
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#ffffff" >
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pdr_origin_ori"/>
        <EditText 
            android:id="@+id/input_ori"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" 
            android:background="#dddddd"
            android:inputType="numberSigned|numberDecimal"/>
    </LinearLayout>
    
      <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#ffffff" >
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pdr_origin_K"/>
        <EditText 
            android:id="@+id/input_K"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" 
            android:background="#dddddd"
            android:inputType="numberSigned|numberDecimal"/>
    </LinearLayout>
    
    
</LinearLayout>